# airflow-lab

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  README.md  pyproject.toml  requirements.txt
dags/: sample.py  thread_test.py
dags/dag_factory/: 00_exam_dag_hourly.py  01_exam_dag_factory_hourly.py  10_exam_dag_manual.py  11_exam_dag_factory_manual.py  20_exam_dag_max_active.py  21_exam_dag_factory_max_active.py
module/airflow/: conf.py
module/airflow/handler/: slack.py
module/airflow/pattern/factory/: dag_factory.py
module/util/notifier/: __init__.py
